@@ -380,3 +380,8 @@
 2012-12-13  Lucas De Marchi
 
     * Fix EINA_INLIST_FOREACH_SAFE macro
+
+2012-12-17 Vincent Torri
+
+	* Add XML output to doc
+	* Add installation rule for doc
